# Hackathon-AI-AND-Scalar

./: Dockerfile  README.md  app.py  environment.py  inference.py  manual_check.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
__pycache__/my_env/: README.md
server/: app.py
