[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-robot-env"
version = "1.0.0"
description = "Dynamic warehouse robot mini-game with 5-tier ladder progression"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.6.3",
    "openai==1.14.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "openenv-core==0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]
